appId: com.novoda.rnplayground
---
- clearState
- launchApp
- runFlow: playground_click_me.yaml
- assertVisible: Alert
- assertVisible: You're not on Android
- tapOn: Duh
